--- a/src/app/dashbord/dashbord.component.css
+++ b/src/app/dashbord/dashbord.component.css
@@ -1,5 +1,5 @@
 .logout-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin-bottom: 15px;
 }
