--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -56,8 +56,11 @@
       <button mat-flat-button color="primary">Login</button>
     </form>
 
-    <div class="button-row">
-      <p>Create New Account</p>
+    <div class="account-register">
+      <span>Don't have an account?</span>
+      <a class="text-link" class="aLink" routerLink="/register"
+        >Create an account</a
+      >
     </div>
   </mat-card-content>
 </mat-card>
