--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
   <div class="timetable-img text-center"></div>
-  <div class="table-responsive">
+  <!-- <div class="table-responsive">
     <table class="table table-bordered text-center">
       <thead>
         <tr class="bg-light-gray">
@@ -73,5 +73,6 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
+  <full-calendar [options]="calendarOptions"></full-calendar>
 </div>
