--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -46,7 +46,7 @@
         />
       </mat-form-field>
     </div>
-    <div class="professeur">Professeur: {{ course.professeurs[0].nom }}</div>
+    <div class="professeur">Professeur: {{teacherName}}</div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
